[package]
name = "glassware-test"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.4"
wasm-bindgen-futures = "0.4.12"
glassware = { path = "../" }
wasm-bindgen = "0.2.62"
web-sys = { version = "0.3.39", features = ["Node", "Window", "Document", "Element", "HtmlElement"] }
